--- a/less/main.less
+++ b/less/main.less
@@ -37,7 +37,7 @@ body {
       position: relative;
       &:hover {
          background-color: #f0f0f0;
-         .close {
+           .close {
             transition: all 0.4s;
             opacity: 0.4;
          }
@@ -99,3 +99,127 @@ body {
       transform: rotate(-45deg);
    }
 }
+
+.popup {
+   display: block;
+   position: fixed;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   width: 100%;
+   height: 100%;
+   z-index: 9;
+   background-color: rgba(0, 0, 0, 0.5);
+   &-content {
+      position: fixed;
+      left: 50%;
+      top: 30%;
+      transform: translateX(-50%);
+      padding: 30px 60px;
+      background-color: white;
+      text-align: center;
+      border-radius:3px;
+   }
+   &-close {
+      position: absolute;
+      top: -15px;
+      right: -20px;
+      width: 20px;
+      background-color: transparent;
+      border: none;
+      font-size: 30px;
+      text-align: center;
+      color: white;
+      &:focus {
+         outline: none
+      }
+   }
+
+}
+
+.form {
+   &-control {
+      position: relative;
+      margin-bottom: 30px;
+      input {
+         display: block;
+         border: 1px solid gray;
+         padding:  10px 20px;
+         border-radius: 2px;
+         &:focus {
+            outline: none;
+         }
+         &:-webkit-autofill:focus {
+            -webkit-box-shadow: 0 0 5px 0    white, 
+                          inset 0 0 0   50px white;
+            -webkit-text-fill-color: black;
+        }
+         &:-webkit-autofill {
+            -webkit-box-shadow:  0 0 5px 0    white, 
+            inset 0 0 0   50px white;
+            -webkit-text-fill-color: black;
+        }
+      }
+           
+   }
+   label {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      padding: 0 1px 0;
+      background-color: white;
+      font-size: 13px;
+   }
+   i {
+      position: absolute;
+      top: 10px;
+      right:4px;
+      visibility: hidden;
+   }
+   small {
+      position: absolute;
+      display: block;
+      bottom: -20px;
+      left: 0;
+      visibility: hidden;
+   }
+   &-btn {
+      display: block;
+      width: 100%;
+      padding:8px;
+      font-size: 16px;
+      margin: auto;
+      border: none;
+      border-radius: 3px;
+   }
+}
+
+.valid {
+   input {
+         border-color: green;
+      }
+      i {
+         &.fa-check-circle {
+            visibility: visible;
+            color: green;
+         }
+      }
+}
+
+.invalid {
+   input{
+      border-color: red;
+   }
+   i {
+      &.fa-exclamation-circle {
+         visibility: visible;
+         color: red;
+      }
+   }
+   small {
+      visibility: visible;
+      color: red;
+   }
+}
+
