--- a/less/main.less
+++ b/less/main.less
@@ -38,8 +38,8 @@ body {
 
       &:hover {
          background-color: #f0f0f0;
-
-         .close {
+         .edit, 
+         .delete {
             transition: all 0.4s;
             opacity: 0.4;
          }
@@ -75,7 +75,7 @@ body {
    margin-left: 40px;
 }
 
-.close {
+.delete {
    position: absolute;
    right: 27px;
    opacity: 0;
@@ -105,7 +105,7 @@ body {
 }
 
 .popup {
-   display: block;
+   display: none;
    position: fixed;
    left: 0;
    right: 0;
@@ -127,21 +127,47 @@ body {
       border-radius: 3px;
    }
 
-   &-close {
-      position: absolute;
-      top: -15px;
-      right: -20px;
-      width: 20px;
-      background-color: transparent;
-      border: none;
-      font-size: 30px;
-      text-align: center;
-      color: white;
+   
+}
 
-      &:focus {
-         outline: none
-      }
+.close {
+   position: absolute;
+   top: -15px;
+   right: -20px;
+   width: 20px;
+   background-color: transparent;
+   border: none;
+   font-size: 30px;
+   text-align: center;
+   color: white;
+
+   &:focus {
+      outline: none
    }
+}
+
+.window {
+   position: fixed;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   width: 100%;
+   height: 100%;
+   z-index: 9;
+   background-color: rgba(0, 0, 0, 0.5);
+
+   &-content {
+      position: fixed;
+      left: 50%;
+      top: 20%;
+      transform: translateX(-50%);
+      padding: 30px 60px;
+      background-color: white;
+      text-align: center;
+      border-radius: 3px;
+   }
+
 }
 
 .form {
@@ -197,17 +223,16 @@ body {
       visibility: hidden;
    }
 
-   &-btn {
-      display: block;
-      width: 100%;
-      padding: 8px;
-      font-size: 16px;
-      margin: auto;
-      border: none;
-      border-radius: 3px;
-   }
 }
-
+.btn {
+   display: block;
+   width: 100%;
+   padding: 8px;
+   font-size: 16px;
+   margin: auto;
+   border: none;
+   border-radius: 3px;
+}
 .valid {
    input {
       border-color: green;
@@ -236,5 +261,20 @@ body {
    small {
       visibility: visible;
       color: red;
+   }
+}
+
+.edit{
+   position: absolute;
+   border: 1px solid red;
+   right: 1.5px;
+   margin-top: 30px;
+   border-radius: 5px;
+   color: crimson;
+   font-size: 10px;
+   outline: none;
+   opacity: 0;
+   &:hover {
+      opacity: 1 !important;
    }
 }
